--- a/style.css
+++ b/style.css
@@ -4,3 +4,27 @@
 #peaky{
     background-image: url(images/britsd.jpg);
 }
+#brook{
+    background-image: url(images/brooklyn-99.png);
+}
+#readyPlay{
+    background-image: url(images/ready-player-one.png);
+}
+#moneyHeist{
+    background-image: url(images/money-heist.png);
+}
+#ashEvil{
+    background-image: url(images/ash-evil.png);
+}
+#redNot{
+    background-image: url(images/redNoticemepls.webp);
+}
+#extraction{
+    background-image: url(images/extraction.webp);
+}
+#adamProj{
+    background-image: url(images/adamProj.jpg);
+}
+#oldGuard{
+    background-image: url(images/theOldGuard.jpg);
+}
