--- a/app.css
+++ b/app.css
@@ -573,6 +573,11 @@ video {
   margin-right: auto;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -602,8 +607,8 @@ video {
   height: 40%;
 }
 
-.h-36 {
-  height: 9rem;
+.h-32 {
+  height: 8rem;
 }
 
 .h-40 {
@@ -614,8 +619,16 @@ video {
   height: 24rem;
 }
 
+.w-1\/12 {
+  width: 8.333333%;
+}
+
 .w-1\/2 {
   width: 50%;
+}
+
+.w-1\/4 {
+  width: 25%;
 }
 
 .w-10 {
@@ -630,12 +643,12 @@ video {
   width: 66.666667%;
 }
 
-.w-52 {
-  width: 13rem;
+.w-7\/12 {
+  width: 58.333333%;
 }
 
-.w-64 {
-  width: 16rem;
+.w-8\/12 {
+  width: 66.666667%;
 }
 
 .w-full {
@@ -769,6 +782,10 @@ video {
   background-size: cover;
 }
 
+.bg-contain {
+  background-size: contain;
+}
+
 .bg-center {
   background-position: center;
 }
@@ -794,10 +811,6 @@ video {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -806,6 +819,15 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.pl-8 {
+  padding-left: 2rem;
 }
 
 .pr-8 {
@@ -882,4 +904,8 @@ video {
 
 .border-cust-color{
   border-color: #7e7e7e;
+}
+
+.cust-w-vid{
+  width: 23.5%;
 }
