--- a/app.src.css
+++ b/app.src.css
@@ -26,7 +26,7 @@ width: 23.5%;
 .cust-progBar[value]::-moz-progress-bar{
     background-color: #E50A15;
 }
-.cust-progBar::-webkit-progress-bar{
+.cust-progBar::-webkit-progress-value{
     color: #E50A15;
 }
 .cust-side-w{
@@ -39,20 +39,6 @@ width: 23.5%;
 .cust-container-h{
     height: 90%;
 }
-.cust-vid-shadow{
-    box-shadow: inset 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-#oldGuard::before {
-    content: "";
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
-    pointer-events: none;
-    z-index: 3; 
-  }
   .cust-icon-s{
     font-size: 0.05rem;
     line-height: 0.25rem;
